# TRT_vs_ONNX

./: .gitignore  CMakeLists.txt  analytics.ipynb  cpp_result.csv  go.sh  python_result.csv  run.sh
include/: Utils.h  Yolov10ONNX.h  Yolov10TRT.h
python/: Untitled.ipynb  common.py  ultralytics_benchmark.ipynb  utils.py  yolov10onnx.py  yolov10trt.py
results/: cpp_result.csv  python_result.csv  ultralytics_result.csv  ultralytics_result_devices.csv
scripts/: onnx_python.sh  run.sh
src/: Utility.cpp  Yolov10ONNX.cpp  Yolov10TRT.cpp
